# qt-opengl

./: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  build_moc.bat  main.cpp  mainwindow.cpp  mainwindow.h
interfaces/: IndexesMode.h  transformational.h
moc_files/: moc_OpenGLWidget.cpp
models/: Camera3D.cpp  Camera3D.h  Group3D.cpp  Group3D.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  ObjectEngine3D.cpp  ObjectEngine3D.h  SimpleObject3D.cpp  SimpleObject3D.h  SkyBox.cpp  SkyBox.h  VertexData.h
shaders/: default.fsh  default.vsh  depth.fsh  depth.vsh  skybox.fsh  skybox.vsh
